tests/transpiler/x/zig/list_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/list_assign.zig:6:9: error: no field or member function named 'put' in '[2]i64'
